Updated readme and added custom color examples

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div class="container">
+  <div class="columns">
+    <div class="column is-12 has-text-centered">
+      <h1 class="is-size-1 has-text-primary">Bulma Works.</h1>
+      <h1 class="is-size-1 has-text-mint-green">This is a custom color.</h1>
+      <h1 class="is-size-1 has-text-grey-super-freakin-dark">This is a custom shade</h1>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
